--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --port 5173"
+    "dev": "npx vite",
+    "build": "npx vite build",
+    "preview": "npx vite preview --port 5173"
   },
   "dependencies": {
     "react": "^18.2.0",
