--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node server/index.js",
-    "client:dev": "npm --prefix client run dev",
-    "client:build": "npm --prefix client run build",
+    "client:dev": "cd client && npm run dev",
+    "client:build": "cd client && npm run build",
     "dev": "concurrently \"npm run start\" \"npm run client:dev\""
   },
   "dependencies": {
