--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server/index.js",
     "client:dev": "cd client && npm run dev",
-    "client:build": "cd client && npm run build",
+    "client:build": "cd client && npm install && npm run build",
     "dev": "concurrently \"npm run start\" \"npm run client:dev\""
   },
   "dependencies": {
